components.css
/* ... */
fig-input-number > [slot],
fig-input-text[type="number"] > [slot] {
  cursor: ew-resize !important;
}

fig-input-color,
fig-input-gradient,
fig-input-fill {
  background-color: var(--figma-color-bg-secondary);
  border-radius: var(--radius-medium);
  box-shadow: none !important;
  &:focus,
  &:focus-within,
  &.has-popup-open {
    outline: var(--figma-focus-outline) !important;
    outline-offset: var(--figma-focus-outline-offset) !important;
  }
  &:hover {
    outline: 1px solid var(--figma-color-border);
    outline-offset: -1px !important;
  }

  & > .input-combo > fig-chit:not(:only-child),
  & > .input-combo > fig-chit:not(:only-child) input,
  & > .input-combo > fig-fill-picker:not(:only-child),
  & > .input-combo > fig-fill-picker:not(:only-child) > fig-chit > input,
  & > .input-combo > label,
  & fig-fill-picker:not(:only-child),
  fig-input-text,
  fig-chit {
    &,
    &:focus,
    &:hover {
      background-color: transparent !important;
      box-shadow: none !important;
      outline: 0 !important;
      border: 0 !important;
      --selected: 0;
    }
  }
  fig-chit ~ fig-input-text > input,
  fig-chit ~ label,
  fig-fill-picker ~ fig-input-text > input,
  fig-fill-picker ~ label {
    padding-left: 0 !important;
  }

  & > .input-combo {
    flex: 1;
    min-width: 0;
  }

  fig-input-number {
    flex: 0;
    flex-basis: 3rem;
    box-shadow: inset 1px 0 0 0 var(--figma-color-bg) !important;
    background-color: transparent !important;
    outline: 0 !important;

    &:focus,
    &:focus-within,
    &:hover {
      outline: 0 !important;
    }
  }

  fig-field:not([direction="vertical"]) & {
    flex: 1;
    min-width: 0;
  }
}
fig-input-gradient {
  --fig-input-gradient-height: 1.5rem;
  --fig-input-gradient-padding: var(--spacer-1);
  --fig-input-gradient-handle-size: 14px;
  --fig-input-gradient-chit-border-radius: var(--radius-large);
  position: relative;
  height: var(--fig-input-gradient-height);
  width: 100%;
  min-width: 0;

  fig-handle[type="color"]{
    --height: var(--fig-input-gradient-handle-size);
    --width: var(--fig-input-gradient-handle-size);
    --fig-handle-padding: 0.125rem;
   
  }

  &:focus,
  &:active,
  &:focus-within {
    outline: var(--figma-focus-outline) !important;
    outline-offset: var(--figma-focus-outline-offset) !important;
  }
  &[mode="tip"]{
    fig-handle[type="color"]{
      --fig-handle-bg: transparent;
      --fig-handle-inner-bg: transparent;
      --fig-handle-outline: none;
      --fig-handle-outline-color: transparent;
      --fig-handle-shadow: none;
      --fig-handle-inner-outline: none;
      
      fig-color-tip{
        bottom: calc(100%);
      }
    }
    .fig-input-gradient-track {
      inset: 0 calc(var(--fig-input-gradient-padding) + 2px);
    }
    --fig-input-gradient-chit-border-radius: var(--radius-medium);
  }

  &[edit="false"] {
    pointer-events: none;
    --fig-input-gradient-chit-border-radius: var(--radius-medium);

    &:focus,
    &:active,
    &:focus-within {
      outline: none !important;
    }

  }

  &[edit="picker"] {
    & > fig-fill-picker {
      display: contents;
    }
  }
  & > fig-chit,
  & > fig-fill-picker > fig-chit {
    --width: 100%;
    width: var(--width);
    --border-radius: var(--fig-input-gradient-chit-border-radius);
  }
  &[size="large"] {
    --fig-input-gradient-height: 2rem;
    --fig-input-gradient-chit-border-radius: var(--radius-medium);
    height: var(--fig-input-gradient-height) !important;
    
    .fig-input-gradient-track {
      inset: 0;
    }
  }

  .fig-input-gradient-track {
    position: absolute;
    display: flex;
    align-items: center;
    inset: 0 calc(var(--fig-input-gradient-padding) + var(--fig-input-gradient-handle-size)/2);
    pointer-events: auto;
    z-index: 1;

    fig-handle {
      pointer-events: auto;
      cursor: default;

      &:hover {
        z-index: 5;
      }
    }

    fig-handle.fig-input-gradient-ghost {
      z-index: 10;
    }
  }
}
/* ... */

